--- a/notebooks/1.0-hdr-inital-notebook.ipynb
+++ b/notebooks/1.0-hdr-inital-notebook.ipynb
@@ -299,14 +299,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**4.1 Constructing `Seen` and `Unseen` Data**"
+    "### **4.1 Constructing `Seen` and `Unseen` Data**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "source": [
+    "Split dataset into training (seen) and testing (unseen) sets."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**4.2 Constructing `Training` and `Testing` Data (from `Seen` Dataset)**"
+    "### **4.2 Constructing `Training` and `Testing` Data (from `Seen` Dataset)**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "source": [
+    "Further split training data into training and validation sets."
    ]
   },
   {
@@ -320,14 +342,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**5.1 Analysis 1**"
+    "### **5.1 Analysis 1**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "source": [
+    "Distribution of churn across contract types, tenure, and payment methods."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**5.2 Analysis 2**"
+    "### **5.2 Analysis 2**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "source": [
+    "Correlation analysis between features and churn."
    ]
   },
   {
@@ -341,23 +385,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**6.1 Initialization**\n",
-    "- Initialization function\n",
-    "- Define Feature and Target"
+    "### **6.1 Initialization**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "source": [
+    "- Define features and target variable.\n",
+    "- Initialization function to load and preprocess data."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**6.2 Data Transformation (Feature Engineering)**"
+    "### **6.2 Data Transformation (Feature Engineering)**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "source": [
+    "- Encoding categorical variables.\n",
+    "- Scaling numerical features.\n",
+    "- Creating new features if relevant."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**6.3 Overview**"
+    "### **6.3 Overview**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "source": [
+    "- Summary of prepared dataset for modeling."
    ]
   },
   {
@@ -371,10 +449,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**7.1 Initialization**\n",
-    "- Initialization Function\n",
-    "- Create Custome Metrics\n",
-    "- Create a workflow of the experiment"
+    "### **7.1 Initialization**"
    ]
   },
   {
@@ -385,49 +460,125 @@
     }
    },
    "source": [
-    "**7.2 Developing the Model Pipeline**"
+    "- Initialize model pipeline and evaluation metrics.\n",
+    "- Define custom metrics if needed.\n",
+    "- Create a workflow of the experiment ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "source": [
+    "### **7.2 Developing the Model Pipeline**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "source": [
+    "- Build machine learning pipeline including preprocessing and model."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**7.3 Model Benchmarking (Comparing model base performance)**"
+    "### **7.3 Model Benchmarking (Comparing model base performance)**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "source": [
+    "- Evaluate multiple algorithms (e.g., Logistic Regression, Random Forest, XGBoost)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**7.4 Tune Model**"
+    "### **7.4 Tune Model**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "source": [
+    "- Hyperparameter tuning using grid search or randomized search."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**7.5 Analyze Model**\n",
-    "\n",
-    "- Evaluate model on data testing\n",
-    "- Residual Analysis\n",
-    "- Learning Curve Inspection"
+    "### **7.5 Analyze Model**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "source": [
+    "- Evaluate model on test data.\n",
+    "- Residual analysis and learning curves.\n",
+    "- Learning Curve Inspection ?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**7.6 Model Calibration (Classification Only)**"
+    "### **7.6 Model Calibration (Classification Only)**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "source": [
+    "- Calibrate probabilities for better decision thresholding."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**7.6 Model Explanation and Interpretation**\n",
-    "- Feature Importance (Tree Based Model) / Coefficient Regression (Regression Based Model)\n",
-    "- SHAP Value identification\n",
-    "- Counter Factual Analysis"
+    "### **7.7 Model Explanation and Interpretation**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "source": [
+    "- Feature importance via tree-based models.\n",
+    "- SHAP value analysis.\n",
+    "- Counterfactual analysis for churn prediction."
    ]
   },
   {
@@ -435,6 +586,17 @@
    "metadata": {},
    "source": [
     "## **Section 8. Model Deployment**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "source": [
+    "- Outline deployment strategy for real-time or batch predictions."
    ]
   },
   {
@@ -448,21 +610,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**9.1 How to implement the model ?**\n"
+    "### **9.1 How to implement the model ?**\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "source": [
+    "- Integrate model into business systems for churn prediction.\n",
+    "- Use API or batch jobs for scoring customers."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**9.2 What are the limitations of the model ?**"
+    "### **9.2 What are the limitations of the model ?**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "source": [
+    "- Model depends on data quality and feature relevance.\n",
+    "- Changes in customer behavior or services may reduce model accuracy over time."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**9.3 Business Calculation (Simulation using unseen data)**"
+    "### **9.3 Business Calculation (Simulation using unseen data)**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "source": [
+    "- Simulate retention interventions based on model predictions."
    ]
   },
   {
@@ -476,18 +673,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**10.1 Conclusion**\n",
-    "- Conclusion (Model)\n",
-    "- Conclusion (Business)"
+    "### **10.1 Conclusion**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "source": [
+    "- Model: The developed model predicts churn with good accuracy and provides insights into key factors.\n",
+    "- Business: Understanding churn drivers enables targeted retention strategies."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**10.2 Recommendation**\n",
-    "- Recommendation (Model)\n",
-    "- Recommendation (Business)"
+    "### **10.2 Recommendation**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "source": [
+    "- Model: Regularly update and monitor model performance.\n",
+    "- Business: Use model insights to improve customer service, contract offerings, and billing options to reduce churn."
    ]
   }
  ],
