Bolden the title and author.

--- a/notebooks/1.0-hdr-inital-notebook.ipynb
+++ b/notebooks/1.0-hdr-inital-notebook.ipynb
@@ -4,8 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1 style=\"text-align: center;\">[Your Project Title]</h1>\n",
-    "<h3 style=\"text-align: center;\">[Your Name]</h3>\n",
+    "**<h1 style=\"text-align: center;\">[Your Project Title]</h1>**\n",
+    "\n",
+    "**<h3 style=\"text-align: center;\">[Your Name]</h3>**\n",
     "\n",
     "---"
    ]
