Set pd set options.

--- a/notebooks/1.0-hdr-inital-notebook.ipynb
+++ b/notebooks/1.0-hdr-inital-notebook.ipynb
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
        "      <th>MultipleLines</th>\n",
        "      <th>InternetService</th>\n",
        "      <th>OnlineSecurity</th>\n",
-       "      <th>...</th>\n",
+       "      <th>OnlineBackup</th>\n",
        "      <th>DeviceProtection</th>\n",
        "      <th>TechSupport</th>\n",
        "      <th>StreamingTV</th>\n",
@@ -259,7 +259,7 @@
        "      <td>No phone service</td>\n",
        "      <td>DSL</td>\n",
        "      <td>No</td>\n",
-       "      <td>...</td>\n",
+       "      <td>Yes</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
@@ -283,7 +283,7 @@
        "      <td>No</td>\n",
        "      <td>DSL</td>\n",
        "      <td>Yes</td>\n",
-       "      <td>...</td>\n",
+       "      <td>No</td>\n",
        "      <td>Yes</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
@@ -307,7 +307,7 @@
        "      <td>No</td>\n",
        "      <td>DSL</td>\n",
        "      <td>Yes</td>\n",
-       "      <td>...</td>\n",
+       "      <td>Yes</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
@@ -331,7 +331,7 @@
        "      <td>No phone service</td>\n",
        "      <td>DSL</td>\n",
        "      <td>Yes</td>\n",
-       "      <td>...</td>\n",
+       "      <td>No</td>\n",
        "      <td>Yes</td>\n",
        "      <td>Yes</td>\n",
        "      <td>No</td>\n",
@@ -355,7 +355,7 @@
        "      <td>No</td>\n",
        "      <td>Fiber optic</td>\n",
        "      <td>No</td>\n",
-       "      <td>...</td>\n",
+       "      <td>No</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
@@ -369,7 +369,6 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 21 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -380,28 +379,33 @@
        "3  7795-CFOCW    Male              0      No         No      45           No   \n",
        "4  9237-HQITU  Female              0      No         No       2          Yes   \n",
        "\n",
-       "      MultipleLines InternetService OnlineSecurity  ... DeviceProtection  \\\n",
-       "0  No phone service             DSL             No  ...               No   \n",
-       "1                No             DSL            Yes  ...              Yes   \n",
-       "2                No             DSL            Yes  ...               No   \n",
-       "3  No phone service             DSL            Yes  ...              Yes   \n",
-       "4                No     Fiber optic             No  ...               No   \n",
+       "      MultipleLines InternetService OnlineSecurity OnlineBackup  \\\n",
+       "0  No phone service             DSL             No          Yes   \n",
+       "1                No             DSL            Yes           No   \n",
+       "2                No             DSL            Yes          Yes   \n",
+       "3  No phone service             DSL            Yes           No   \n",
+       "4                No     Fiber optic             No           No   \n",
        "\n",
-       "  TechSupport StreamingTV StreamingMovies        Contract PaperlessBilling  \\\n",
-       "0          No          No              No  Month-to-month              Yes   \n",
-       "1          No          No              No        One year               No   \n",
-       "2          No          No              No  Month-to-month              Yes   \n",
-       "3         Yes          No              No        One year               No   \n",
-       "4          No          No              No  Month-to-month              Yes   \n",
+       "  DeviceProtection TechSupport StreamingTV StreamingMovies        Contract  \\\n",
+       "0               No          No          No              No  Month-to-month   \n",
+       "1              Yes          No          No              No        One year   \n",
+       "2               No          No          No              No  Month-to-month   \n",
+       "3              Yes         Yes          No              No        One year   \n",
+       "4               No          No          No              No  Month-to-month   \n",
        "\n",
-       "               PaymentMethod MonthlyCharges  TotalCharges Churn  \n",
-       "0           Electronic check          29.85         29.85    No  \n",
-       "1               Mailed check          56.95        1889.5    No  \n",
-       "2               Mailed check          53.85        108.15   Yes  \n",
-       "3  Bank transfer (automatic)          42.30       1840.75    No  \n",
-       "4           Electronic check          70.70        151.65   Yes  \n",
+       "  PaperlessBilling              PaymentMethod  MonthlyCharges TotalCharges  \\\n",
+       "0              Yes           Electronic check           29.85        29.85   \n",
+       "1               No               Mailed check           56.95       1889.5   \n",
+       "2              Yes               Mailed check           53.85       108.15   \n",
+       "3               No  Bank transfer (automatic)           42.30      1840.75   \n",
+       "4              Yes           Electronic check           70.70       151.65   \n",
        "\n",
-       "[5 rows x 21 columns]"
+       "  Churn  \n",
+       "0    No  \n",
+       "1    No  \n",
+       "2   Yes  \n",
+       "3    No  \n",
+       "4   Yes  "
       ]
      },
      "metadata": {},
@@ -410,6 +414,8 @@
    ],
    "source": [
     "import pandas as pd\n",
+    "pd.set_option('display.max_columns', None)\n",
+    "pd.set_option('display.max_rows', None)\n",
     "\n",
     "real_df = pd.read_csv(r'C:\\Users\\User\\Documents\\Purwadhika\\JCDS 2602\\Capstone Project\\telco-churn\\data\\raw\\data.csv')\n",
     "df = real_df.copy()\n",
