--- a/notebooks/1.0-hdr-inital-notebook.ipynb
+++ b/notebooks/1.0-hdr-inital-notebook.ipynb
@@ -1308,7 +1308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1323,8 +1323,6 @@
     }
    ],
    "source": [
-    "# Numerical distributions for MonthlyCharges and TotalCharges to be checked for outliers.\n",
-    "\n",
     "numerics = df.select_dtypes(include=['float64','int64']).columns.tolist()\n",
     "fig, axes = plt.subplots(1, 3, figsize=(15, 5))\n",
     "\n",
@@ -1337,8 +1335,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **3.5. Unique Values Identification**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1507,7 +1512,6 @@
     }
    ],
    "source": [
-    "# Cardinality checks on categorical variables to understand unique values.\n",
     "columns = df.columns\n",
     "unique = dict()\n",
     "nunique = dict()\n",
