--- a/notebooks/1.0-hdr-inital-notebook.ipynb
+++ b/notebooks/1.0-hdr-inital-notebook.ipynb
@@ -1338,7 +1338,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **3.5. Unique Values Identification**"
+    "### **3.5. Unique Values Identification**"
    ]
   },
   {
@@ -2248,6 +2248,13 @@
    "source": [
     "- Model: Regularly update and monitor model performance.\n",
     "- Business: Use model insights to improve customer service, contract offerings, and billing options to reduce churn."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **References**"
    ]
   }
  ],
