Add notes SMOTE in tune model.

--- a/notebooks/1.0-hdr-inital-notebook.ipynb
+++ b/notebooks/1.0-hdr-inital-notebook.ipynb
@@ -2081,6 +2081,7 @@
     }
    },
    "source": [
+    "- Resampling using SMOTE/ADASYN/etc. (Using ImbLearn)\n",
     "- Hyperparameter tuning using grid search or randomized search."
    ]
   },
