--- a/notebooks/1.0-hdr-inital-notebook.ipynb
+++ b/notebooks/1.0-hdr-inital-notebook.ipynb
@@ -1702,99 +1702,99 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>1</th>\n",
        "      <td>Logistic Regression</td>\n",
-       "      <td>f1</td>\n",
-       "      <td>0.593256</td>\n",
-       "      <td>0.031151</td>\n",
+       "      <td>recall</td>\n",
+       "      <td>0.543813</td>\n",
+       "      <td>0.042389</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>Gradient Boosting</td>\n",
-       "      <td>f1</td>\n",
-       "      <td>0.580302</td>\n",
-       "      <td>0.017418</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>SVM</td>\n",
-       "      <td>f1</td>\n",
-       "      <td>0.579430</td>\n",
-       "      <td>0.017209</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>53</th>\n",
-       "      <td>CatBoost</td>\n",
-       "      <td>f1</td>\n",
-       "      <td>0.578805</td>\n",
-       "      <td>0.025421</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>AdaBoost</td>\n",
-       "      <td>f1</td>\n",
-       "      <td>0.567670</td>\n",
-       "      <td>0.015173</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>48</th>\n",
-       "      <td>LightGBM</td>\n",
-       "      <td>f1</td>\n",
-       "      <td>0.566053</td>\n",
-       "      <td>0.026881</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38</th>\n",
+       "      <th>36</th>\n",
        "      <td>k-NN</td>\n",
-       "      <td>f1</td>\n",
-       "      <td>0.552224</td>\n",
-       "      <td>0.003778</td>\n",
+       "      <td>recall</td>\n",
+       "      <td>0.541137</td>\n",
+       "      <td>0.004915</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>43</th>\n",
+       "      <th>16</th>\n",
+       "      <td>Gradient Boosting</td>\n",
+       "      <td>recall</td>\n",
+       "      <td>0.517057</td>\n",
+       "      <td>0.020897</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>51</th>\n",
+       "      <td>CatBoost</td>\n",
+       "      <td>recall</td>\n",
+       "      <td>0.515719</td>\n",
+       "      <td>0.025241</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>LightGBM</td>\n",
+       "      <td>recall</td>\n",
+       "      <td>0.511037</td>\n",
+       "      <td>0.026706</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
        "      <td>XGBoost</td>\n",
-       "      <td>f1</td>\n",
-       "      <td>0.550671</td>\n",
-       "      <td>0.013794</td>\n",
+       "      <td>recall</td>\n",
+       "      <td>0.507692</td>\n",
+       "      <td>0.021195</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Random Forest</td>\n",
-       "      <td>f1</td>\n",
-       "      <td>0.544431</td>\n",
-       "      <td>0.025820</td>\n",
+       "      <th>31</th>\n",
+       "      <td>SVM</td>\n",
+       "      <td>recall</td>\n",
+       "      <td>0.503679</td>\n",
+       "      <td>0.017773</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>Bagging</td>\n",
-       "      <td>f1</td>\n",
-       "      <td>0.498313</td>\n",
-       "      <td>0.021954</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>6</th>\n",
        "      <td>Decision Tree</td>\n",
-       "      <td>f1</td>\n",
-       "      <td>0.498078</td>\n",
-       "      <td>0.022494</td>\n",
+       "      <td>recall</td>\n",
+       "      <td>0.501003</td>\n",
+       "      <td>0.024704</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>AdaBoost</td>\n",
+       "      <td>recall</td>\n",
+       "      <td>0.492977</td>\n",
+       "      <td>0.018990</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Random Forest</td>\n",
+       "      <td>recall</td>\n",
+       "      <td>0.475585</td>\n",
+       "      <td>0.023113</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>Bagging</td>\n",
+       "      <td>recall</td>\n",
+       "      <td>0.424749</td>\n",
+       "      <td>0.022386</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                  Model Metric  Mean Score   Std Dev\n",
-       "3   Logistic Regression     f1    0.593256  0.031151\n",
-       "18    Gradient Boosting     f1    0.580302  0.017418\n",
-       "33                  SVM     f1    0.579430  0.017209\n",
-       "53             CatBoost     f1    0.578805  0.025421\n",
-       "23             AdaBoost     f1    0.567670  0.015173\n",
-       "48             LightGBM     f1    0.566053  0.026881\n",
-       "38                 k-NN     f1    0.552224  0.003778\n",
-       "43              XGBoost     f1    0.550671  0.013794\n",
-       "13        Random Forest     f1    0.544431  0.025820\n",
-       "28              Bagging     f1    0.498313  0.021954\n",
-       "8         Decision Tree     f1    0.498078  0.022494"
+       "                  Model  Metric  Mean Score   Std Dev\n",
+       "1   Logistic Regression  recall    0.543813  0.042389\n",
+       "36                 k-NN  recall    0.541137  0.004915\n",
+       "16    Gradient Boosting  recall    0.517057  0.020897\n",
+       "51             CatBoost  recall    0.515719  0.025241\n",
+       "46             LightGBM  recall    0.511037  0.026706\n",
+       "41              XGBoost  recall    0.507692  0.021195\n",
+       "31                  SVM  recall    0.503679  0.017773\n",
+       "6         Decision Tree  recall    0.501003  0.024704\n",
+       "21             AdaBoost  recall    0.492977  0.018990\n",
+       "11        Random Forest  recall    0.475585  0.023113\n",
+       "26              Bagging  recall    0.424749  0.022386"
       ]
      },
      "execution_count": 21,
@@ -1805,7 +1805,7 @@
    "source": [
     "results_df = pd.DataFrame(list_scores)\n",
     "results_df = results_df.sort_values(by=['Mean Score', 'Std Dev'], ascending=False)\n",
-    "results_df[results_df['Metric'] == 'f1']"
+    "results_df[results_df['Metric'] == 'recall']"
    ]
   },
   {
@@ -1829,13 +1829,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Running pipeline with smote resampling...\n",
+      "Fitting 5 folds for each of 50 candidates, totalling 250 fits\n",
+      "Running pipeline with adasyn resampling...\n",
       "Fitting 5 folds for each of 50 candidates, totalling 250 fits\n"
      ]
     }
@@ -1847,70 +1850,80 @@
     "from sklearn.model_selection import RandomizedSearchCV\n",
     "from scipy.stats import uniform\n",
     "import warnings\n",
-    "\n",
-    "# Define SMOTE for resampling\n",
-    "smote = SMOTE(random_state=42)\n",
-    "\n",
+    "from imblearn.over_sampling import ADASYN\n",
     "# Logistic Regression model\n",
     "logreg = LogisticRegression(random_state=42, max_iter=1000, n_jobs=-1)\n",
     "\n",
-    "# Create pipeline including preprocessing, SMOTE, and classifier\n",
-    "pipeline = ImbPipeline([\n",
-    "    ('preprocessor', preprocessor),\n",
-    "    ('smote', smote),\n",
-    "    ('classifier', logreg)\n",
-    "])\n",
+    "# Define resampling methods\n",
+    "smote = SMOTE(random_state=42)\n",
+    "adasyn = ADASYN(random_state=42)\n",
     "\n",
-    "# Define hyperparameter distribution for Logistic Regression\n",
-    "param_dist = {\n",
-    "    'classifier__C': uniform(0.01, 10),\n",
-    "    'classifier__penalty': ['l1', 'l2', 'elasticnet'],\n",
-    "    'classifier__solver': ['saga'],\n",
-    "    'classifier__l1_ratio': uniform(0, 1)\n",
+    "# Dictionary of resampling methods\n",
+    "resamplers = {\n",
+    "    'smote': smote,\n",
+    "    'adasyn': adasyn\n",
     "}\n",
     "\n",
-    "# Setup RandomizedSearchCV\n",
-    "random_search = RandomizedSearchCV(\n",
-    "    estimator=pipeline,\n",
-    "    param_distributions=param_dist,\n",
-    "    n_iter=50,\n",
-    "    scoring='f1',\n",
-    "    cv=cv,\n",
-    "    verbose=2,\n",
-    "    random_state=42,\n",
-    "    n_jobs=-1,\n",
-    "    refit=True\n",
-    ")\n",
+    "# You can loop over resampling methods to create pipelines and fit models\n",
+    "for name, sampler in resamplers.items():\n",
+    "    print(f\"Running pipeline with {name} resampling...\")\n",
+    "    \n",
+    "    # Create pipeline\n",
+    "    pipeline = ImbPipeline([\n",
+    "        ('preprocessor', preprocessor),\n",
+    "        ('resampler', sampler),\n",
+    "        ('classifier', logreg)\n",
+    "    ])\n",
     "\n",
-    "# Suppress warnings during fit\n",
-    "with warnings.catch_warnings():\n",
-    "    warnings.simplefilter(\"ignore\")\n",
-    "    random_search.fit(X_train, y_train)\n"
+    "    # Define hyperparameter distribution (same as before)\n",
+    "    param_dist = {\n",
+    "        'classifier__C': uniform(0.01, 10),\n",
+    "        'classifier__penalty': ['l1', 'l2', 'elasticnet'],\n",
+    "        'classifier__solver': ['saga'],\n",
+    "        'classifier__l1_ratio': uniform(0, 1)\n",
+    "    }\n",
+    "\n",
+    "    # Setup RandomizedSearchCV\n",
+    "    random_search = RandomizedSearchCV(\n",
+    "        estimator=pipeline,\n",
+    "        param_distributions=param_dist,\n",
+    "        n_iter=50,\n",
+    "        scoring='recall',\n",
+    "        cv=cv,\n",
+    "        verbose=2,\n",
+    "        random_state=42,\n",
+    "        n_jobs=-1,\n",
+    "        refit=True\n",
+    "    )\n",
+    "\n",
+    "    # Suppress warnings during fit\n",
+    "    with warnings.catch_warnings():\n",
+    "        warnings.simplefilter(\"ignore\")\n",
+    "        random_search.fit(X_train, y_train)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best parameters found: {'classifier__C': 7.722703466859457, 'classifier__l1_ratio': 0.07404465173409036, 'classifier__penalty': 'elasticnet', 'classifier__solver': 'saga'}\n",
-      "Best cross-validation F1 score: 0.6337873945384723\n"
+      "Best recall score with adasyn: 0.8354515050167224\n",
+      "Best parameters with adasyn: {'classifier__C': 4.732149251619493, 'classifier__l1_ratio': 0.1195942459383017, 'classifier__penalty': 'l2', 'classifier__solver': 'saga'}\n"
      ]
     }
    ],
    "source": [
-    "# Print best parameters and best score\n",
-    "print(\"Best parameters found:\", random_search.best_params_)\n",
-    "print(\"Best cross-validation F1 score:\", random_search.best_score_)"
+    "print(f\"Best recall score with {name}: {random_search.best_score_}\")\n",
+    "print(f\"Best parameters with {name}: {random_search.best_params_}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1919,12 +1932,12 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.91      0.72      0.80      1035\n",
-      "           1       0.51      0.80      0.62       374\n",
+      "           0       0.92      0.67      0.78      1035\n",
+      "           1       0.48      0.83      0.61       374\n",
       "\n",
-      "    accuracy                           0.74      1409\n",
-      "   macro avg       0.71      0.76      0.71      1409\n",
-      "weighted avg       0.80      0.74      0.75      1409\n",
+      "    accuracy                           0.72      1409\n",
+      "   macro avg       0.70      0.75      0.69      1409\n",
+      "weighted avg       0.80      0.72      0.73      1409\n",
       "\n"
      ]
     }
