--- a/notebooks/1.0-hdr-inital-notebook.ipynb
+++ b/notebooks/1.0-hdr-inital-notebook.ipynb
@@ -1869,7 +1869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1879,29 +1879,9 @@
       "Fitting 5 folds for each of 50 candidates, totalling 250 fits\n",
       "Best recall score with SMOTE: 0.7968\n",
       "Best parameters with SMOTE: {'classifier__penalty': 'l2', 'classifier__solver': 'saga'}\n",
-      "Classification report for SMOTE on test set:\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.92      0.71      0.80       723\n",
-      "           1       0.51      0.83      0.63       263\n",
-      "\n",
-      "    accuracy                           0.74       986\n",
-      "   macro avg       0.71      0.77      0.71       986\n",
-      "weighted avg       0.81      0.74      0.75       986\n",
-      "\n",
       "Fitting 5 folds for each of 50 candidates, totalling 250 fits\n",
       "Best recall score with ADASYN: 0.8490\n",
-      "Best parameters with ADASYN: {'classifier__penalty': 'l1', 'classifier__solver': 'saga'}\n",
-      "Classification report for ADASYN on test set:\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.92      0.68      0.78       723\n",
-      "           1       0.49      0.85      0.62       263\n",
-      "\n",
-      "    accuracy                           0.72       986\n",
-      "   macro avg       0.71      0.76      0.70       986\n",
-      "weighted avg       0.81      0.72      0.74       986\n",
-      "\n"
+      "Best parameters with ADASYN: {'classifier__penalty': 'l1', 'classifier__solver': 'saga'}\n"
      ]
     }
    ],
@@ -2013,12 +1993,7 @@
     "\n",
     "    # Cetak hasil terbaik\n",
     "    print(f\"Best recall score with {name}: {random_search.best_score_:.4f}\")\n",
-    "    print(f\"Best parameters with {name}: {random_search.best_params_}\")\n",
-    "\n",
-    "    # Prediksi dan evaluasi pada test set\n",
-    "    y_pred = random_search.predict(X_test)\n",
-    "    print(f\"Classification report for {name} on test set:\")\n",
-    "    print(classification_report(y_test, y_pred))\n"
+    "    print(f\"Best parameters with {name}: {random_search.best_params_}\")\n"
    ]
   },
   {
@@ -2203,25 +2178,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **4.8 Model Explanation and Interpretation**"
+    "## **Section 5. Evaluation**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "source": [
-    "- Feature importance via tree-based models.\n",
-    "- SHAP value analysis.\n",
-    "- Counterfactual analysis for churn prediction."
+    "### **5.1 Model Explanation and Interpretation**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2362,9 +2331,8 @@
        "\"\"\""
       ]
      },
-     "execution_count": 25,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -2415,8 +2383,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **5.2 SHAP Values Interpretation**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2462,51 +2437,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **Section 8. Model Deployment**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "source": [
-    "- Outline deployment strategy for real-time or batch predictions."
+    "### **5.3 Counterfactual analysis for churn prediction.**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **Section 9. Model Implementation**"
+    "## **Section 6. Deployment**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **9.1 How to implement the model ?**\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "source": [
-    "- Integrate model into business systems for churn prediction.\n",
-    "- Use API or batch jobs for scoring customers."
+    "### **6.1 Model Deployment Using Joblib**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **9.2 What are the limitations of the model ?**"
+    "### **6.2 How To Use Joblib Model**\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **6.3 Model Limitations**"
    ]
   },
   {
@@ -2525,32 +2484,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **9.3 Business Calculation (Simulation using unseen data)**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "source": [
-    "- Simulate retention interventions based on model predictions."
+    "## **Section 7. Conclusion and Recommendation**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **Section 10. Conclusion and Recommendation**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### **10.1 Conclusion**"
+    "### **7.1 Conclusion**"
    ]
   },
   {
@@ -2569,7 +2510,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **10.2 Recommendation**"
+    "### **7.2 Recommendation**"
    ]
   },
   {
