Update context and dataset info.

--- a/notebooks/1.2-hdr-coderefactor-notebook.ipynb
+++ b/notebooks/1.2-hdr-coderefactor-notebook.ipynb
@@ -10,7 +10,7 @@
         "---\n",
         "## Section 1. Business Understanding\n",
         "### 1.1 Context\n",
-        "The dataset contains customer information from a telecom company including demographics, services subscribed, account information, and churn status. The business context is to predict customer churn to enable targeted retention strategies.\n",
+        "The dataset represents customer profiles who have left the telco company. A churn in telco and other subscription-based services means a situation when the customer leaves the service provider. \n",
         "\n",
         "### 1.2 Problem Statements\n",
         "- Which customers are likely to churn?\n",
@@ -304,29 +304,69 @@
       "metadata": {},
       "source": [
         "### 2.2 Feature Information\n",
-        "| Feature            | Description                                      | Impact to Business                                         |\n",
-        "|--------------------|------------------------------------------------|------------------------------------------------------------|\n",
-        "| customerID         | Unique customer identifier                       | Identification, no direct impact                            |\n",
-        "| gender             | Customer gender (Male, Female)                   | Possible demographic influence                              |\n",
-        "| SeniorCitizen      | Whether the customer is a senior citizen (0,1)  | May affect churn due to different needs                    |\n",
-        "| Partner            | Whether customer has a partner (Yes, No)        | Social factors influencing churn                            |\n",
-        "| Dependents         | Whether customer has dependents (Yes, No)       | Social factors influencing churn                            |\n",
-        "| tenure             | Number of months customer has stayed             | Longer tenure usually means lower churn                     |\n",
-        "| PhoneService       | Whether customer has phone service (Yes, No)    | Service usage influence                                     |\n",
-        "| MultipleLines      | Whether customer has multiple lines (Yes, No, No phone service) | Service usage influence                                     |\n",
-        "| InternetService    | Type of internet service (DSL, Fiber optic, No) | Service type impact on churn                                |\n",
-        "| OnlineSecurity     | Whether customer has online security (Yes, No, No internet service) | Service feature impact                                      |\n",
-        "| OnlineBackup       | Whether customer has online backup (Yes, No, No internet service) | Service feature impact                                      |\n",
-        "| DeviceProtection   | Whether customer has device protection (Yes, No, No internet service) | Service feature impact                                      |\n",
-        "| TechSupport        | Whether customer has tech support (Yes, No, No internet service) | Service feature impact                                      |\n",
-        "| StreamingTV        | Whether customer streams TV (Yes, No, No internet service) | Service feature impact                                      |\n",
-        "| StreamingMovies    | Whether customer streams movies (Yes, No, No internet service) | Service feature impact                                      |\n",
-        "| Contract           | Contract type (Month-to-month, One year, Two year) | Contract length impact on churn                             |\n",
-        "| PaperlessBilling   | Whether customer uses paperless billing (Yes, No) | Billing preference impact                                   |\n",
-        "| PaymentMethod      | Payment method used                               | Billing method impact                                       |\n",
-        "| MonthlyCharges     | Monthly charges                                  | Financial factor influencing churn                          |\n",
-        "| TotalCharges       | Total charges to date                            | Financial factor influencing churn                          |\n",
-        "| Churn              | Whether customer churned (Yes, No)              | Target variable                                            |"
+        "\n",
+        "<table>\n",
+        "    <tr>\n",
+        "        <th>Feature</th>\n",
+        "        <th>Importance</th>\n",
+        "        <th>Impact to Business</th>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "        <td>Dependents</td>\n",
+        "        <td>Moderate</td>\n",
+        "        <td>Understanding customer demographics can aid in targeted marketing strategies.</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "        <td>Tenure</td>\n",
+        "        <td>High</td>\n",
+        "        <td>Longer tenure often indicates customer loyalty, impacting retention strategies.</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "        <td>OnlineSecurity</td>\n",
+        "        <td>High</td>\n",
+        "        <td>Customers with online security are likely to feel safer, reducing churn.</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "        <td>OnlineBackup</td>\n",
+        "        <td>Moderate</td>\n",
+        "        <td>Offering online backup can enhance customer satisfaction and retention.</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "        <td>InternetService</td>\n",
+        "        <td>High</td>\n",
+        "        <td>Understanding service subscriptions helps in optimizing service offerings.</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "        <td>DeviceProtection</td>\n",
+        "        <td>Moderate</td>\n",
+        "        <td>Device protection can be a key selling point for tech-savvy customers.</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "        <td>TechSupport</td>\n",
+        "        <td>High</td>\n",
+        "        <td>Good tech support can significantly reduce churn and improve customer satisfaction.</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "        <td>Contract</td>\n",
+        "        <td>High</td>\n",
+        "        <td>Contract types influence customer retention and revenue predictability.</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "        <td>PaperlessBilling</td>\n",
+        "        <td>Moderate</td>\n",
+        "        <td>Encouraging paperless billing can reduce costs and appeal to environmentally conscious customers.</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "        <td>MonthlyCharges</td>\n",
+        "        <td>High</td>\n",
+        "        <td>Understanding pricing impacts customer acquisition and retention strategies.</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "        <td>Churn</td>\n",
+        "        <td>Critical</td>\n",
+        "        <td>Churn rate is a key performance indicator for business health and customer satisfaction.</td>\n",
+        "    </tr>\n",
+        "</table>"
       ]
     },
     {
