Elaborate context and problem statements

--- a/notebooks/1.2-hdr-coderefactor-notebook.ipynb
+++ b/notebooks/1.2-hdr-coderefactor-notebook.ipynb
@@ -10,12 +10,19 @@
         "---\n",
         "## Section 1. Business Understanding\n",
         "### 1.1 Context\n",
-        "The dataset represents customer profiles who have left the telco company. A churn in telco and other subscription-based services means a situation when the customer leaves the service provider. \n",
+        "Customer churn in the telecom industry refers to the rate at which existing customers discontinue using a telecom service within a specific period. This phenomenon is critical because it directly affects a company's revenue and profitability. Customers may churn due to dissatisfaction with service quality, uncompetitive pricing, poor customer support, or more attractive offers from competitors. Understanding and managing churn is essential for telecom companies to maintain a stable customer base and financial health (O'Brien & Downie, 2024; Britto, 2024; Luck, 2023; Investopedia Team, 2024).\n",
+        "\n",
+        "Churn is essentially the opposite of customer retention, measuring the number of customers lost over a given timeframe. In subscription-based services like telecom, churn immediately impacts revenue since it involves the loss of recurring payments. The churn rate is calculated as the percentage of customers lost relative to the total number of customers at the start of the period. For example, if a company starts with 300 customers and loses 50 within a year, the churn rate is approximately 16.67% (Luck, 2023).\n",
+        "\n",
+        "In the telecom sector, churn is particularly significant because high churn rates can lead to financial losses and hinder growth. Acquiring new customers is often more expensive than retaining existing ones, making it vital for companies to focus on reducing churn by improving service quality, offering competitive pricing, and enhancing customer engagement (O'Brien & Downie, 2024; Luck, 2023; Britto, 2024; Investopedia Team, 2024).\n",
         "\n",
         "### 1.2 Problem Statements\n",
         "- Which customers are likely to churn?\n",
+        "    + In the telecom sector, predicting which customers are likely to churn involves analyzing customer data to identify patterns and behaviors that indicate a high risk of leaving. This can be achieved by using machine learning models trained on historical data. Classification models are commonly used for this purpose (Kumari et al., 2025; IQ Team, 2025). By identifying at-risk customers, companies can implement targeted retention strategies to reduce churn.\n",
         "- What factors influence customer churn the most?\n",
+        "    + Understanding the factors that drive customer churn is essential for developing effective retention strategies. Feature importance analysis from machine learning models helps identify which attributes have the strongest impact on churn likelihood. For instance, high monthly charges or poor customer service experiences are often significant predictors of churn (Kumari et al., 2025; Bhatnagar & Srivastava, 2025). By focusing on these key factors, businesses can optimize their services and improve customer satisfaction.\n",
         "- How can the company reduce churn and improve customer retention?\n",
+        "    + To reduce churn and enhance retention, telecom companies can leverage insights from predictive models to implement targeted strategies. These may include offering personalized plans, discounts, or improved customer support to at-risk customers. Additionally, addressing common issues highlighted by churn predictors—such as high costs or poor service quality—can reduce overall churn rates. By combining predictive insights with business actions, companies can maximize customer lifetime value and reduce acquisition costs, which are typically higher than retention costs (BlastChar, 2018; Bhatnagar & Srivastava, 2025).\n",
         "\n",
         "### 1.3 Goals\n",
         "- Develop a predictive model to classify customers as churn or no churn.\n",
@@ -4618,6 +4625,24 @@
       "metadata": {},
       "source": [
         "## References\n",
+        "\n",
+        "Bhatnagar, A., & Srivastava, S. (2025). *Customer churn analysis in telecom. Computing Online.* https://computingonline.net/computing/article/view/3873\n",
+        "\n",
+        "BlastChar. (2018). *Telco customer churn prediction*. Kaggle. https://www.kaggle.com/datasets/blastchar/telco-customer-churn\n",
+        "\n",
+        "Britto, F. (2024, September 9). *Churn in telecom: What it is and its impacts.* SYDLE. https://www.sydle.com/blog/churn-telecom-66b4c9e8b2713612fa17da85\n",
+        "\n",
+        "Investopedia Team. (2024, March 21). *Churn rate: What it means, examples, and calculations.* Investopedia. https://www.investopedia.com/terms/c/churnrate.asp\n",
+        "\n",
+        "IQ Team. (2025, February 23). *Top 17 customer churn datasets and projects (Updated for 2025).* Interview Query. https://www.interviewquery.com/p/customer-churn-datasets\n",
+        "\n",
+        "Kumari, D., Singh, S. K., Katira, S. S., Srinivas, I. V., & Salunkhe, U. (2025). *Telecom customer churn forecasting using machine learning: A data-driven predictive framework.* \n",
+        "Metallurgical and Materials Engineering, 31(4), 922-929. https://doi.org/10.63278/1536\n",
+        "\n",
+        "Luck, I. (2023, April 4). *What is customer churn? Complete meaning & guide.* CustomerGauge. https://customergauge.com/customer-churn\n",
+        "\n",
+        "O'Brien, K., & Downie, A. (2024, September 9). *What is customer churn?* IBM. https://www.ibm.com/think/topics/customer-churn\n",
+        "\n",
         "- Scikit-learn documentation: https://scikit-learn.org/stable/\n",
         "- SHAP documentation: https://shap.readthedocs.io/en/latest/\n",
         "- Statsmodels documentation: https://www.statsmodels.org/stable/index.html\n",
