Elaborate analytical approach.

--- a/notebooks/1.2-hdr-coderefactor-notebook.ipynb
+++ b/notebooks/1.2-hdr-coderefactor-notebook.ipynb
@@ -9,37 +9,50 @@
         "\n",
         "---\n",
         "## Section 1. Business Understanding\n",
-        "### 1.1 Context\n",
+        "### 1.1 Background\n",
+        "\n",
+        "XYZ Company is a leading telecommunications provider known for its innovative services and customer-centric approach. Operating in a highly competitive market, XYZ Company offers a wide range of telecom solutions, including mobile, broadband, and digital services, catering to both individual and business customers. Despite its strong market presence, XYZ Company faces challenges related to customer churn, a critical issue that impacts its revenue and growth. By leveraging data analytics and customer insights, XYZ Company aims to mitigate churn and enhance customer retention, ensuring long-term sustainability and profitability in the dynamic telecom industry.\n",
+        "\n",
         "Customer churn in the telecom industry refers to the rate at which existing customers discontinue using a telecom service within a specific period. This phenomenon is critical because it directly affects a company's revenue and profitability. Customers may churn due to dissatisfaction with service quality, uncompetitive pricing, poor customer support, or more attractive offers from competitors. Understanding and managing churn is essential for telecom companies to maintain a stable customer base and financial health (O'Brien & Downie, 2024; Britto, 2024; Luck, 2023; Investopedia Team, 2024).\n",
         "\n",
         "Churn is essentially the opposite of customer retention, measuring the number of customers lost over a given timeframe. In subscription-based services like telecom, churn immediately impacts revenue since it involves the loss of recurring payments. The churn rate is calculated as the percentage of customers lost relative to the total number of customers at the start of the period. For example, if a company starts with 300 customers and loses 50 within a year, the churn rate is approximately 16.67% (Luck, 2023).\n",
         "\n",
         "In the telecom sector, churn is particularly significant because high churn rates can lead to financial losses and hinder growth. Acquiring new customers is often more expensive than retaining existing ones, making it vital for companies to focus on reducing churn by improving service quality, offering competitive pricing, and enhancing customer engagement (O'Brien & Downie, 2024; Luck, 2023; Britto, 2024; Investopedia Team, 2024).\n",
         "\n",
-        "### 1.2 Problem Statements\n",
+        "### 1.2 Gap Analysis\n",
+        "The gap analysis for the telecom customer churn prediction project identifies key areas for improvement. Currently, the company lacks a predictive model to identify customers at risk of churning, which limits its ability to implement effective retention strategies. There are significant gaps in data quality, stakeholder engagement, and model interpretability, which can hinder informed decision-making. Additionally, establishing a continuous improvement process is essential to adapt to changing customer behaviors, along with integrating predictive insights into operational workflows. By addressing these gaps, the company can reduce churn rates, enhance customer retention, and improve overall business performance.\n",
+        "\n",
+        "### 1.3 Problem Statements\n",
         "- Which customers are likely to churn?\n",
-        "    + In the telecom sector, predicting which customers are likely to churn involves analyzing customer data to identify patterns and behaviors that indicate a high risk of leaving. This can be achieved by using machine learning models trained on historical data. Classification models are commonly used for this purpose (Kumari et al., 2025; IQ Team, 2025). By identifying at-risk customers, companies can implement targeted retention strategies to reduce churn.\n",
         "- What factors influence customer churn the most?\n",
-        "    + Understanding the factors that drive customer churn is essential for developing effective retention strategies. Feature importance analysis from machine learning models helps identify which attributes have the strongest impact on churn likelihood. For instance, high monthly charges or poor customer service experiences are often significant predictors of churn (Kumari et al., 2025; Bhatnagar & Srivastava, 2025). By focusing on these key factors, businesses can optimize their services and improve customer satisfaction.\n",
         "- How can the company reduce churn and improve customer retention?\n",
+        "\n",
+        "### 1.4 Goals\n",
+        "- Develop a predictive model to classify customers as churn or no churn.\n",
+        "    + In the telecom sector, predicting which customers are likely to churn involves analyzing customer data to identify patterns and behaviors that indicate a high risk of leaving. This can be achieved by using machine learning models trained on historical data. Classification models are commonly used for this purpose (Kumari et al., 2025; IQ Team, 2025). By identifying at-risk customers, companies can implement targeted retention strategies to reduce churn.\n",
+        "- Identify key features affecting churn.\n",
+        "    + Understanding the factors that drive customer churn is essential for developing effective retention strategies. Feature importance analysis from machine learning models helps identify which attributes have the strongest impact on churn likelihood. For instance, high monthly charges or poor customer service experiences are often significant predictors of churn (Kumari et al., 2025; Bhatnagar & Srivastava, 2025). By focusing on these key factors, businesses can optimize their services and improve customer satisfaction.\n",
+        "- Provide actionable insights for business to reduce churn.\n",
         "    + To reduce churn and enhance retention, telecom companies can leverage insights from predictive models to implement targeted strategies. These may include offering personalized plans, discounts, or improved customer support to at-risk customers. Additionally, addressing common issues highlighted by churn predictors—such as high costs or poor service quality—can reduce overall churn rates. By combining predictive insights with business actions, companies can maximize customer lifetime value and reduce acquisition costs, which are typically higher than retention costs (BlastChar, 2018; Bhatnagar & Srivastava, 2025).\n",
         "\n",
-        "### 1.3 Goals\n",
-        "- Develop a predictive model to classify customers as churn or no churn.\n",
-        "- Identify key features affecting churn.\n",
-        "- Provide actionable insights for business to reduce churn.\n",
-        "\n",
-        "### 1.4 Analytical Approach\n",
-        "- Use supervised machine learning classification techniques.\n",
-        "- Data preprocessing including cleaning, feature engineering.\n",
-        "- Model development with benchmarking, tuning, and evaluation.\n",
-        "- Model explanation using feature importance and SHAP values.\n",
-        "\n",
-        "### 1.5 Metric Evaluation\n",
+        "### 1.5 Analytical Approach\n",
+        "- Business Understanding  \n",
+        "    + The problem of customer churn is identified as a critical challenge for XYZ Telecom. A predictive model is required to address this issue effectively. The business impact of churn is analyzed to ensure long-term profitability.  \n",
+        "- Data Understanding  \n",
+        "    + The dataset is explored to uncover patterns and anomalies. Missing values and duplicates are checked to ensure data quality. Distributions of key features are visualized to understand their relationships with churn.  \n",
+        "- Data Preparation  \n",
+        "    + The target variable is converted into a binary format for modeling. Categorical features are encoded. The data is split into training and testing sets for evaluation.  \n",
+        "- Modeling  \n",
+        "    + Multiple machine learning algorithms and numerical scaling methods are tested to identify the best performer. Class imbalance is addressed using resampling techniques. Decision thresholds are optimized to improve recall for churn prediction.  \n",
+        "- Evaluation  \n",
+        "    + Model performance is measured using recall. Key drivers of churn are interpreted using explainability tools. A confusion matrix is generated to visualize prediction accuracy.  \n",
+        "- Deployment  \n",
+        "    + The final model is saved for future use. Predictions are made on new customer data to flag churn risks.\n",
+        "### 1.6 Metric Evaluation\n",
         "- Business Metric: Reduction in churn rate.\n",
         "- Machine Learning Evaluation Metric: Accuracy, Precision, Recall, F1-score, ROC-AUC.\n",
         "\n",
-        "### 1.6 Success Criteria\n",
+        "### 1.7 Success Criteria\n",
         "- Achieve high classification performance (e.g., ROC-AUC > 0.80).\n",
         "- Provide interpretable insights for business decisions.\n",
         "- Demonstrate model effectiveness on unseen data."
